package com.app.composetestingdemo.common

object TestTags {
    const val EMAIL_FIELD_TEST_TAG = "EMAIL_FIELD_TEST_TAG"
    const val PASSWORD_FIELD_TEST_TAG = "PASSWORD_FIELD_TEST_TAG"
    const val LOGIN_TOGGLE_TEST_TAG = "LOGIN_TOGGLE_TEST_TAG"
    const val SUBMIT_TEST_TAG = "SUBMIT_TEST_TAG"
    const val USERS_LIST_TEST_TAG = "USERS_LIST_TEST_TAG"
}